update and adding getall users controller and login controller and jwt verification plus swagger documentation
