# docs/swagger.yaml
@@ -13,6 +13,57 @@ tags:
   - name: role
     description: Modulo de roles
 paths:
+  /user/login:
+    post:
+      tags:
+        - user
+      summary: Endpoint para login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:                
+                email:
+                  type: string
+                  required: true
+                password: 
+                  type: string
+                  required: true                
+      responses:
+        200:
+          description: Login exitoso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 200
+                  token:
+                    type: string
+                  admin:
+                    type: boolean
+        401:
+          description: Usuario no valido
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 401
+                  message:
+                    type: string
+                    example: Usuario o contraseña invalido
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
   /user:
     post:
       tags:
@@ -24,6 +75,9 @@ paths:
             schema:
               type: object
               properties:
+                user_name:
+                  type: string
+                  required: true
                 name:
                   type: string
                   required: true
@@ -59,7 +113,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
+    get:
+      tags:
+        - user
+      summary: Endpoint para obtener usuario
+      responses:
+        200:
+          description: Obtiene todos los usuarios
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: 
+                    type: 200
+                    example: 200
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/user'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
 
+    
 
 components:
   schemas:
@@ -72,3 +152,29 @@ components:
         message:
           type: string
           example: Internal server error
+    user:
+      type: object
+      properties:
+        id:
+          type: number
+        user_name:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        password: 
+          type: string
+        phone: 
+          type: string
+        address:
+          type: string
+        role:           
+            $ref: '#/components/schemas/role'
+    role:
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
